ArgoCD/apps/prometheus-operator/templates/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: prometheus.localmonitoringstack.com.au
spec:
  rules:
  - host: prometheus.localmonitoringstack.com.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operator-kube-p-prometheus
            port:
              number: 9090
